samples/_failures_safe/1761562112_b03809_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07001d1f.c: In function ‘main’:
./samples/SAFE/__tmp_07001d1f.c:134:19: error: expected ‘)’ at end of input
  134 |         if (sscanf
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_07001d1f.c:134:9: error: expected declaration or statement at end of input
  134 |         if (sscanf
      |         ^~
./samples/SAFE/__tmp_07001d1f.c:134:9: error: expected declaration or statement at end of input
